fix: Navbar items alignment

--- a/plugins-structure/packages/common-ui/src/layout/screen/Navbar.module.css
+++ b/plugins-structure/packages/common-ui/src/layout/screen/Navbar.module.css
@@ -48,7 +48,9 @@
 
 .navItems {
   justify-self: end;
-  text-align: end;
+  align-items: center;
+  display: flex;
+  justify-content: end;
 }
 
 .navItems > * {
